--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dotenv-expand": "^5.1.0",
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "ws": "^7.4.6"
   }
 }
