--- a/data/quickstarts/anaconda-ce-create-jupyter-notebook-quickstart.yaml
+++ b/data/quickstarts/anaconda-ce-create-jupyter-notebook-quickstart.yaml
@@ -8,7 +8,7 @@ spec:
   appName: anaconda-ce
   durationMinutes: 5
   icon: 'images/anaconda-ce.svg'
-  description: A quick step-by-step guide to creating an Anaconda-enabled Jupyter notebook.
+  description: Create an Anaconda-enabled Jupyter notebook and access Anaconda packages that are curated for security and compatibility.
   introduction: |-
     ### This quick start shows you how to create an Anaconda-enabled Jupyter notebook.
     Red Hat® OpenShift® Data Science lets you run Jupyter notebooks on our Red Hat® OpenShift Dedicated environment.
