--- a/data/quickstarts/oneapi-aikit-notebook.yaml
+++ b/data/quickstarts/oneapi-aikit-notebook.yaml
@@ -10,7 +10,7 @@ spec:
   appName: aikit
   durationMinutes: 15
   icon: 'images/oneapi-aikit.png'
-  description: This quick start details how to use the Intel® oneAPI AI Analytics Toolkit.
+  description: Run a data science notebook sample with the AI Kit and load your own notebook.
   introduction: |-
     ### This quick start details how to develop using the Intel® oneAPI AI Analytics Toolkit.
 
