--- a/data/quickstarts/seldon-deploy-canary-quickstart.yaml
+++ b/data/quickstarts/seldon-deploy-canary-quickstart.yaml
@@ -8,7 +8,7 @@ spec:
   appName: seldon-deploy
   durationMinutes: 10
   icon: 'images/seldon.svg'
-  description: How to perform a canary promotion of a Scikit-Learn model.
+  description: Launch a SKLearn model and update it using canary deployment practices. 
   prerequisites: [You completed the "Create a Jupyter notebook" quick start.]
   introduction: |-
     ### This quick start shows you how to launch a SKLearn model and use canary deployment practices to update the model.
