Update text based on jira RHODS-2219

--- a/data/quickstarts/openvino-inference-notebook.yaml
+++ b/data/quickstarts/openvino-inference-notebook.yaml
@@ -9,7 +9,7 @@ spec:
   appName: openvino
   durationMinutes: 5
   icon: 'images/openvino.svg'
-  description: This quick start details how to use the OpenVINO toolkit.
+  description: Quantize an ONNX computer vision model using the OpenVINO model optimizer and use the result for inference from a notebook. 
   introduction: |-
     ### This quick start details how to quantize a model and use the result for inference from a notebook using the OpenVINO toolkit.
 
