--- a/data/quickstarts/seldon-deploy-canary-quickstart.yaml
+++ b/data/quickstarts/seldon-deploy-canary-quickstart.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     opendatahub.io/categories: 'AI/Machine learning,Deployment,Model serving,SciKit-Learn'
 spec:
-  displayName: Launch a SKLearn model and update model by canarying
+  displayName: Launching and updating a SKLearn model with canary deployment
   appName: seldon-deploy
   durationMinutes: 10
   icon: 'images/seldon.svg'
