--- a/data/quickstarts/oneapi-aikit-notebook.yaml
+++ b/data/quickstarts/oneapi-aikit-notebook.yaml
@@ -6,7 +6,7 @@ metadata:
     opendatahub.io/categories: 'AI/Machine learning,Getting started,Jupyter notebook,Python,oneAPI,Scikit-Learn,Pandas,TensorFlow,PyTorch,Modin,LPOT'
 
 spec:
-  displayName: Intel® oneAPI AI Analytics Toolkit (AI Kit) Notebook
+  displayName: Using the Intel® oneAPI AI Analytics Toolkit (AI Kit) notebook 
   appName: aikit
   durationMinutes: 15
   icon: 'images/oneapi-aikit.png'
