Updated cards according to microcopy recommendations.
Updated cards according to microcopy recommendations.

Updated cards according to microcopy recommendations.

Updated cards according to microcopy recommendations.

Updated cards according to microcopy recommendations.

Updated cards according to microcopy recommendations.

Updated cards according to microcopy recommendations.

Updated cards according to microcopy recommendations.

Updated cards according to microcopy recommendations.

--- a/data/applications/aikit.yaml
+++ b/data/applications/aikit.yaml
@@ -9,7 +9,7 @@ spec:
     The AI Kit is a set of AI software tools to accelerate end-to-end data science and analytics pipelines on Intel® architectures.
   route: ''
   img: images/oneapi.png
-  category: Self managed
+  category: Self-managed
   support: third party support
   csvName: aikit-operator
   docsLink: https://software.intel.com/content/www/us/en/develop/tools/oneapi/ai-analytics-toolkit.html
