--- a/data/applications/openvino.yaml
+++ b/data/applications/openvino.yaml
@@ -9,7 +9,7 @@ spec:
     OpenVINO is an open source toolkit to help optimize deep learning performance and deploy using an inference engine onto Intel hardware.
   kfdefApplications: []
   img: images/openvino.svg
-  category: Self managed
+  category: Self-managed
   support: third party support
   csvName: openvino-operator
   docsLink: https://docs.openvinotoolkit.org/latest/index.html
