--- a/data/quickstarts/oneapi-aikit-notebook.yaml
+++ b/data/quickstarts/oneapi-aikit-notebook.yaml
@@ -3,7 +3,7 @@ kind: ConsoleQuickStart
 metadata:
   name: create-aikit-notebook
   annotations:
-    opendatahub.io/categories: 'AI/Machine learning,Getting started,Jupyter notebook,Python,oneAPI,Scikit-Learn,Pandas,TensorFlow,PyTorch,Modin,LPOT'
+    opendatahub.io/categories: 'AI/Machine learning,Getting started,Jupyter notebook,Python,oneAPI,SciKit-Learn,Pandas,TensorFlow,PyTorch,Modin,LPOT'
 
 spec:
   displayName: Using the Intel® oneAPI AI Analytics Toolkit (AI Kit) notebook 
