--- a/data/applications/pachyderm.yaml
+++ b/data/applications/pachyderm.yaml
@@ -6,13 +6,12 @@ spec:
   displayName: Pachyderm
   provider: Pachyderm
   description: |-
-      Pachyderm is the data foundation for machine learning.  
-     Pachyderm is the data foundation for machine learning. It provides industry-leading data versioning, pipelines, and lineage for data science teams to automate the machine learning lifecycle and optimize machine learning operations (MLOps).
+    Pachyderm is a group of products that help data science teams automate and optimize their machine learning operations.
   kfdefApplications: []
   route: ''
   img: images/pachyderm.svg
   docsLink: https://docs.pachyderm.com/
   category: Self-managed
   support: third party support
-  quickStart: pachyderm-beginner-tutorial-notebook
-  csvName: pachyderm-operator
+  quickStart: ''
+  comingSoon: true
