Anaconda Commeriacl Edition description fix.

--- a/data/applications/anaconda-ce.yaml
+++ b/data/applications/anaconda-ce.yaml
@@ -4,7 +4,7 @@ spec:
   displayName: Anaconda Commercial Edition
   provider: Anaconda
   description: |-
-    Anaconda Commercial Edition is the most popular open source package distribution and management experience, optimized for commercial use.
+    Anaconda Commercial Edition is a popular open source package distribution and management experience that is optimized for commercial use.
   kfdefApplications: []
   route: ''
   img: images/anaconda-ce.svg
