--- a/data/applications/pachyderm.yaml
+++ b/data/applications/pachyderm.yaml
@@ -14,4 +14,5 @@ spec:
   category: Self-managed
   support: third party support
   quickStart: pachyderm-beginner-tutorial-notebook
+  getStartedLink: https://marketplace.redhat.com/en-us/products/pachyderm
   csvName: pachyderm-operator
