--- a/.env
+++ b/.env
@@ -14,3 +14,4 @@ SOURCE_REPOSITORY_URL=git@github.com:red-hat-data-services/odh-dashboard.git
 SOURCE_REPOSITORY_REF=master
 DOC_LINK ='https://access.redhat.com/documentation/en-us/red_hat_openshift_data_science'
 SUPPORT_LINK ='https://access.redhat.com/support/cases/#/case/new/open-case?caseCreate=true'
+ENABLED_APPS_CM = 'odh-enabled-applications-config'
