--- a/data/applications/starburst.yaml
+++ b/data/applications/starburst.yaml
@@ -15,9 +15,6 @@ spec:
   support: third party support
   quickStart: ''
   getStartedLink: https://www.starburst.io/platform/starburst-galaxy/
-  beta: true
-  betaText: |-
-    This application is available for early access prior to official
-    release. It won’t appear in the *Enabled* view, but you can access it by
-    [signing up for beta access.](https://www.starburst.io/platform/starburst-galaxy/).
+  beta: false
+  betaText: ''
 
