--- a/data/applications/openvino.yaml
+++ b/data/applications/openvino.yaml
@@ -4,9 +4,9 @@ metadata:
     opendatahub.io/categories: 'AI/Machine learning,Jupyter notebook,TensorFlow,Python,PyTorch'
 spec:
   displayName: OpenVINO
-  provider: Intel
+  provider: Intel®
   description: |-
-    OpenVINO is an open source toolkit to help optimize deep learning performance and deploy using an inference engine onto Intel hardware.
+    OpenVINO is an open source toolkit to help optimize deep learning performance and deploy using an inference engine onto Intel® hardware.
   kfdefApplications: []
   img: images/openvino.svg
   category: Self-managed
