--- a/data/applications/watson-studio.yaml
+++ b/data/applications/watson-studio.yaml
@@ -17,3 +17,4 @@ spec:
   support: third party support
   quickStart: build-deploy-watson-model
   getStartedLink: https://developer.ibm.com/series/cloud-pak-for-data-learning-path
+  featureFlag: watson
