--- a/data/quickstarts/deploy-watson-model-quickstart.yaml
+++ b/data/quickstarts/deploy-watson-model-quickstart.yaml
@@ -4,6 +4,7 @@ metadata:
   annotations:
     opendatahub.io/categories: 'AI/Machine learning,Deployment,Jupyter notebook,Model serving,Python'
 spec:
+  featureFlag: watson
   displayName: Deploying a model with Watson Studio
   appName: watson-studio
   durationMinutes: 15
