[UPSTREAM] RHODS-3159: Added PVC and Cluster Settings code
Added code for PVC, Cluster Settings, and updated to the latest version of patternfly.

update pvc settings

Fixed linting error.

Fixed package-lock.json files.

Fixed linting errors.

Removed broken test.

--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ SOURCE_REPOSITORY_REF=master
 DOC_LINK ='https://access.redhat.com/documentation/en-us/red_hat_openshift_data_science'
 SUPPORT_LINK ='https://access.redhat.com/support/cases/#/case/new/open-case?caseCreate=true'
 ENABLED_APPS_CM = 'rhods-enabled-applications-config'
+ADMIN_GROUP = 'rhods-admins'
