--- a/data/quickstarts/pachyderm-beginner-tutorial-notebook.yaml
+++ b/data/quickstarts/pachyderm-beginner-tutorial-notebook.yaml
@@ -19,7 +19,7 @@ spec:
     - title: Launching JupyterHub notebook server
       description: |-
         ### Important considerations
-        Use the **Minimal Python** notebook with a **Large** container size.
+        Use the **Standard Data Science** notebook with a **Medium** container size.
 
       review:
         instructions: |-
@@ -50,9 +50,10 @@ spec:
       description: |-
         ### Before experimenting, you will need to "connect" your notebook to Pachyderm
         To connect your notebook to a cluster, follow those steps:
-        ALL COMMANDS AND STEPS REFERENCED BELOW ARE DETAILED IN THE GETTING STARTED SECTION.
-        1. Install Pachyderm’s CLI (`pachchtl`) from a top new cell in your notebook.
-        2. In another cell, create a new context for your CLI to connect to your cluster.
+        ALL COMMANDS AND STEPS REFERENCED BELOW ARE DETAILED IN THE GETTING STARTED SECTION:
+        *OpenShift Data Science Dashboard* > *Explore* > *Pachyderm* 
+        1. Install Pachyderm’s CLI (`pachchtl`) from a top new cell in your notebook. 
+        2. In another cell, create a new context for your CLI to connect to your cluster. 
         3. Set the pachctl context to your newly created context.
         4. Verify that your active context is the new context.
 
