Added cluster settings navigation.
RHODS-2856 - Cluster settings opt-in telemetry

Updated with code to update config map.

Fixed linting errors.

Fixed linting errors.

Updated telemetry opt-in api call for patching the config map.

Only allow rhods-admin to be considered an admin.

Fixed linting error.

Fixed integration test.

Removed debug from package.json will do a seperate PR for that.

Fixed checking for rhods-admin instead of admin in roleref.

Removed useWatchClusterSettings as it's nots needed.

Fixed linting errors.

Fixed constant polling.

Review comments updated, and removed tests that just checked the dist structures.

Review comments updates.

Updated with review comments.

Updated with review comments.

Fixed margin in ClusterSettings.scss

Env uipdate

Fixed the way we check for admin.

Updated to rhods-admins for the admin group.

Added updates to read admin group from config map.

Fixed linting errors.

Removed rhods-admin env variable.

Fixed linting issue.

Updated the error message.

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "start": "npm run tsc && NODE_ENV=production node ./dist/server.js --log=1 --registry=localhost:50051",
     "start:dev": "export NODE_ENV=development && nodemon src/server.ts --log=1 --registry=localhost:50051",
+    "debug": "npm run tsc && export NODE_ENV=development && node --inspect ./dist/server.js --log=1 --registry=localhost:50051",
     "build-only": "tsc -p . && node ./dist/server.js --log=1 --registry=localhost:50051 --buildonly",
     "build": "npm run build:clean; npm run tsc",
     "build:clean": "rimraf ./dist",
