Add ISV dashboard tiles and images
Signed-off-by: Landon LaSmith <LLaSmith@redhat.com>

--- a/data/quickstarts/deploy-python-model-quickstart.yaml
+++ b/data/quickstarts/deploy-python-model-quickstart.yaml
@@ -4,15 +4,15 @@ metadata:
   annotations:
     opendatahub.io/categories: 'AI/Machine learning,Deployment,Jupyter notebook,Model serving,Python'
 spec:
-  displayName: Deploying a sample Python application using Flask and OpenShift.
+  displayName: Deploying a sample Python application using Flask and OpenShift
   appName: jupyterhub
   durationMinutes: 10
   icon: 'images/jupyterhub.svg'
-  description: How to deploy a Python model using Flask and OpenShift.
+  description: Deploy your data science model out of a Jupyter notebook and into a Flask application to use as a development sandbox. 
   prerequisites: [You completed the "Create a Jupyter notebook" quick start.]
   introduction: |-
     ### This quick start shows you how to deploy a Python model.
-    Open Data Hub lets you run Jupyter notebooks in a scalable OpenShift hybrid cloud environment.
+    Red Hat® OpenShift® Data Science makes it easy for you to deploy your data science models in a Red Hat® OpenShift® Dedicated environment.
 
     This quick start shows you how to take your model out of a Jupyter notebook and put it into a Flask application running on OpenShift Dedicated, for use as a development sandbox.
   tasks:
@@ -64,11 +64,11 @@ spec:
         3. In a Jupyter notebook, navigate to a terminal view.
         4. Run this curl command, using the URL you copied in step 1.
         ```
-        curl -X POST -d '{"hello" ":" "world"}' <URL>/prediction
+        curl -X POST -d '{"hello" ":" "world"}' <URL>/predictions
         ```
         For example:
         ```
-        curl -X POST -d '{"hello" ":" "world"}' http://example.apps.organization.abc3.p4.openshiftapps.com/prediction
+        curl -X POST -d '{"hello" ":" "world"}' http://example.apps.organization.abc3.p4.openshiftapps.com/predictions
         ```
 
         This should return `{"prediction":"not implemented"}` as output.
@@ -77,7 +77,7 @@ spec:
           #### Verify that your deployed application is working:
           Did you receive the response `{"prediction" '':'' "not implemented"}`?
         failedTaskHelp:
-          This task is not verified yet. Make sure your application built correctly. Make sure you remembered to add `/prediction` to the end of the application URL to get to the endpoint.
+          This task is not verified yet. Make sure your application built correctly. Make sure you remembered to add `/predictions` to the end of the application URL to get to the endpoint.
       summary:
         success: You have verified that the sample model deployment is executing!
         failed: Try the steps again.
