--- a/data/quickstarts/create-jupyter-notebook-quickstart.yaml
+++ b/data/quickstarts/create-jupyter-notebook-quickstart.yaml
@@ -8,10 +8,10 @@ spec:
   appName: jupyterhub
   durationMinutes: 5
   icon: 'images/jupyterhub.svg'
-  description: This quick start will walk you through creating a Jupyter notebook.
+  description: Create a Jupyter notebook in JupyterLab. 
   introduction: |-
     ### This quick start shows you how to create a Jupyter notebook.
-    Open Data Hub lets you run Jupyter notebooks in a scalable OpenShift hybrid cloud environment.
+    Red Hat® OpenShift® Data Science lets you run Jupyter notebooks on our Red Hat® OpenShift® Dedicated environment.
 
     We have configured the JupyterHub spawner to support your amazing Data Scientist explorations and model deployments.
 
@@ -38,9 +38,12 @@ spec:
         ### Configuring and starting an environment:
         1. Select a notebook image from the options provided.
         2. Select a container size based on your computation needs.
-        3. Click the **Start** button.
+        3. Click the **Start server** button.
+        
+        If you have not previously authorized the jupyterhub-hub service account to access your account, the **Authorize Access** page appears prompting you to provide authorization. Inspect the permissions selected by default, and click the **Allow selected permissions** button.
 
         The **Start a notebook server** page will reload and indicate that the system is starting up.
+        
       review:
         instructions: |-
           #### To verify that you have launched the Jupyter notebook:
