--- a/manifests/base/odh-dashboard-crd.yaml
+++ b/manifests/base/odh-dashboard-crd.yaml
@@ -16,6 +16,8 @@ spec:
       schema:
         openAPIV3Schema:
           type: object
+          required:
+            - spec
           properties:
             spec:
               type: object
@@ -41,6 +43,9 @@ spec:
                       type: boolean
                 groupsConfig:
                   type: object
+                  required:
+                    - adminGroups
+                    - allowedGroups
                   properties:
                     adminGroups:
                       type: string
@@ -75,21 +80,13 @@ spec:
                                 type: string
                 notebookController:
                   type: object
+                  required:
+                    - enabled
                   properties:
                     enabled:
                       type: boolean
                     notebookNamespace:
                       type: string
-                    gpuConfig:
-                      type: object
-                      properties:
-                        enabled:
-                          type: boolean
-                    envVarConfig:
-                      type: object
-                      properties:
-                        enabled:
-                          type: boolean
                     pvcSize:
                       type: string
             status:
