Front end coded, backend api updated. (#382)
Fixed linting error.

Updates to backend and frontend code.

Updated to set toleration for notebook.

Fixed notebookTolerationSettings.

Fixed linting error

fixed issue with default settings.

Removed dead code

Removed unused import

Removed any from body constant

Added toleration support for notebooks.

Added toleration support in cluster settings, and updated code to add toleration to notebooks if it's enabled.

Added toleration support in cluster settings, and updated code to add toleration to notebooks if it's enabled.

--- a/manifests/base/odh-dashboard-crd.yaml
+++ b/manifests/base/odh-dashboard-crd.yaml
@@ -89,6 +89,13 @@ spec:
                       type: string
                     pvcSize:
                       type: string
+                    notebookTolerationSettings:
+                      type: object
+                      properties:
+                          enabled: 
+                            type: boolean
+                          key: 
+                            type: string
             status:
               type: object
               properties:
