Add group config panel & support for multi-groups (#270)

--- a/manifests/overlays/odhdashboardconfig/odh-dashboard-config.yaml
+++ b/manifests/overlays/odhdashboardconfig/odh-dashboard-config.yaml
@@ -40,3 +40,6 @@ spec:
       requests:
         cpu: "4"
         memory: 4Gi
+  groupsConfig:
+    adminGroups: 'odh-admins'
+    allowedGroups: 'system:authenticated'
