--- a/manifests/base/cluster-role.yaml
+++ b/manifests/base/cluster-role.yaml
@@ -106,6 +106,7 @@ rules:
       - delete
     resources:
       - rolebindings
+      - clusterrolebindings
       - roles
   - apiGroups:
       - ''
