Update the Jupyter Application categories
Updates the Jupyter application categories metadata to match the new
category values and remove the deprecated 'Jupyter Notebook'

--- a/data/applications/jupyter.yaml
+++ b/data/applications/jupyter.yaml
@@ -1,7 +1,7 @@
 metadata:
   name: jupyter
   annotations:
-    opendatahub.io/categories: 'Jupyter notebook'
+    opendatahub.io/categories: 'Model development,Model training,Notebook environments'
 spec:
   displayName: Jupyter
   provider: Jupyter
