--- a/data/applications/jupyter.yaml
+++ b/data/applications/jupyter.yaml
@@ -1,7 +1,7 @@
 metadata:
   name: jupyter
   annotations:
-    opendatahub.io/categories: 'Jupyter notebook'
+    opendatahub.io/categories: 'Model development,Model training,Notebook environments'
 spec:
   displayName: Jupyter
   provider: Jupyter
@@ -10,7 +10,7 @@ spec:
   kfdefApplications: ['odh-notebook-controller', 'notebook-images']
   img: images/jupyter.svg
   category: Red Hat managed
-  support: red hat
+  support: redhat
   docsLink: https://jupyter.org
   internalRoute: notebookController
   quickStart: create-jupyter-notebook
