Add a GPU setting to the config to allow more control over the field & it's values (#694)
* Add a GPU setting to the config to allow more control over the field & it's values

* Added wording from UX

--- a/manifests/crd/odh-dashboard-crd.yaml
+++ b/manifests/crd/odh-dashboard-crd.yaml
@@ -89,6 +89,9 @@ spec:
                       type: string
                     pvcSize:
                       type: string
+                    gpuSetting:
+                      description: Configure how the GPU field works on the Jupyter tile. One of 'autodetect' (default, fetches for information), 'hidden' (remove the field) or a number-string (eg '5') to specify a hardcoded 0 to that number options
+                      type: string
                     notebookTolerationSettings:
                       type: object
                       properties:
