Adjust DSG Image Puller Permissions (#736)

--- a/manifests/overlays/authentication/kustomization.yaml
+++ b/manifests/overlays/authentication/kustomization.yaml
@@ -5,6 +5,8 @@ bases:
 resources:
   - clusterrolebinding.yaml
   - secret.yaml
+  - fetch-builds-and-images.yaml
+  - image-clusterrolebinding.yaml
 patchesJson6902:
   - path: deployment.yaml
     target:
