Feature: Model serving merge into main (#762)
* Add empty view and empty dsg section

* Add feature flag for model serving
* Add nav section for global model serving view
* Add dsg section behind the feature flag

* Model server modal

* Enable support to fetch deployed models

* Rename variables and files

* Add Deployed model table and row to the global page

* Add support to deployed server

* Add model servers list to the project details page (#734)

* Add details model server list and deployed models

* add global model serving context and tokens

* update import

* add model server details

* Add delete InferenceService modal (#742)

* Add delete InferenceService modal

* refine logic checking disable model serving

* Add delete model server modal (#752)

* Add support to deployed server (#758)

* Add support for serving runtime edit (#772)

Co-authored-by: Juntao Wang <juntwang@redhat.com>
Co-authored-by: Juntao Wang <37624318+DaoDaoNoCode@users.noreply.github.com>
Co-authored-by: Andrew Ballantyne <aballant@redhat.com>

--- a/manifests/overlays/odhdashboardconfig/odh-dashboard-config.yaml
+++ b/manifests/overlays/odhdashboardconfig/odh-dashboard-config.yaml
@@ -14,9 +14,35 @@ spec:
     disableTracking: true
     enablement: true
     disableProjects: true
+    disableModelServing: true
   notebookController:
     enabled: true
   notebookSizes:
+  - name: Small
+    resources:
+      limits:
+        cpu: "2"
+        memory: 2Gi
+      requests:
+        cpu: "1"
+        memory: 1Gi
+  - name: Medium
+    resources:
+      limits:
+        cpu: "4"
+        memory: 4Gi
+      requests:
+        cpu: "2"
+        memory: 2Gi
+  - name: Large
+    resources:
+      limits:
+        cpu: "8"
+        memory: 8Gi
+      requests:
+        cpu: "4"
+        memory: 4Gi
+  modelServerSizes:
   - name: Small
     resources:
       limits:
