--- a/manifests/crd/odh-dashboard-crd.yaml
+++ b/manifests/crd/odh-dashboard-crd.yaml
@@ -43,6 +43,8 @@ spec:
                       type: boolean
                     disableProjects:
                       type: boolean
+                    disableModelServing:
+                      type: boolean
                 groupsConfig:
                   type: object
                   required:
@@ -80,6 +82,33 @@ spec:
                                 type: string
                               memory:
                                 type: string
+                  modelServerSizes:
+                    type: array
+                    items:
+                      type: object
+                      required:
+                        - name
+                        - resources
+                      properties:
+                        name:
+                          type: string
+                        resources:
+                          type: object
+                          properties:
+                            requests:
+                              type: object
+                              properties:
+                                cpu:
+                                  type: string
+                                memory:
+                                  type: string
+                            limits:
+                              type: object
+                              properties:
+                                cpu:
+                                  type: string
+                                memory:
+                                  type: string
                 notebookController:
                   type: object
                   required:
