--- a/manifests/overlays/odhdashboardconfig/odh-dashboard-config.yaml
+++ b/manifests/overlays/odhdashboardconfig/odh-dashboard-config.yaml
@@ -13,8 +13,8 @@ spec:
     disableSupport: false
     disableTracking: true
     enablement: true
-    disableProjects: true
-    disableModelServing: true
+    disableProjects: false
+    disableModelServing: false
   notebookController:
     enabled: true
   notebookSizes:
@@ -47,26 +47,26 @@ spec:
     resources:
       limits:
         cpu: "2"
-        memory: 2Gi
+        memory: 8Gi
       requests:
         cpu: "1"
-        memory: 1Gi
+        memory: 4Gi
   - name: Medium
     resources:
       limits:
-        cpu: "4"
-        memory: 4Gi
+        cpu: "8"
+        memory: 10Gi
       requests:
-        cpu: "2"
-        memory: 2Gi
+        cpu: "4"
+        memory: 8Gi
   - name: Large
     resources:
       limits:
-        cpu: "8"
-        memory: 8Gi
+        cpu: "10"
+        memory: 20Gi
       requests:
-        cpu: "4"
-        memory: 4Gi
+        cpu: "6"
+        memory: 16Gi
   groupsConfig:
     adminGroups: 'odh-admins'
     allowedGroups: 'system:authenticated'
