UI enhancements for model serving (#789)

--- a/manifests/overlays/odhdashboardconfig/odh-dashboard-config.yaml
+++ b/manifests/overlays/odhdashboardconfig/odh-dashboard-config.yaml
@@ -13,8 +13,8 @@ spec:
     disableSupport: false
     disableTracking: true
     enablement: true
-    disableProjects: false
-    disableModelServing: false
+    disableProjects: true
+    disableModelServing: true
   notebookController:
     enabled: true
   notebookSizes:
