--- a/.env
+++ b/.env
@@ -10,9 +10,7 @@
 
 ############### Default settings ###############
 BACKEND_PORT=8080
-IMAGE_REPOSITORY=quay.io/opendatahub/odh-dashboard:dev
-SOURCE_REPOSITORY_URL=git@github.com:opendatahub-io/odh-dashboard.git
-SOURCE_REPOSITORY_REF=master
+IMAGE_REPOSITORY=quay.io/opendatahub/odh-dashboard:nightly
 DOC_LINK ='https://opendatahub.io/docs.html'
 COMMUNITY_LINK ='https://opendatahub.io/community.html'
 ENABLED_APPS_CM = 'odh-enabled-applications-config'
