--- a/manifests/modelserving/ovms-ootb.yaml
+++ b/manifests/modelserving/ovms-ootb.yaml
@@ -5,7 +5,6 @@ metadata:
   labels:
     opendatahub.io/dashboard: 'true'
     opendatahub.io/ootb: 'true'
-    opendatahub.io/configurable: 'true'
   annotations:
     tags: 'ovms,servingruntime'
     description: 'OpenVino Model Serving Definition'
@@ -15,7 +14,7 @@ objects:
     metadata:
       name: ovms
       annotations:
-        openshift.io/display-name: 'OpenVINO Model Server (config works)'
+        openshift.io/display-name: 'OpenVINO Model Server'
         opendatahub.io/disable-gpu: 'true'
       labels:
         opendatahub.io/dashboard: 'true'
