Add startup function to migrate disablement status for Custom Serving Runtime

--- a/manifests/modelserving/ovms-gpu-ootb.yaml
+++ b/manifests/modelserving/ovms-gpu-ootb.yaml
@@ -56,4 +56,7 @@ objects:
         - autoSelect: true
           name: onnx
           version: '1'
+        - autoSelect: true
+          name: tensorflow
+          version: "2" 
 parameters: []
