Add permissions for templates and serving runtimes

--- a/manifests/base/role.yaml
+++ b/manifests/base/role.yaml
@@ -122,3 +122,27 @@ rules:
       - console.openshift.io
     resources:
       - odhquickstarts
+  - apiGroups:
+      - template.openshift.io
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+    resources:
+      - templates
+  - apiGroups:
+      - serving.kserve.io
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+    resources:
+      - servingruntimes
