--- a/manifests/overlays/odhdashboardconfig/kustomization.yaml
+++ b/manifests/overlays/odhdashboardconfig/kustomization.yaml
@@ -1,6 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../base
-  - odh-dashboard-config.yaml
-  - odh-enabled-applications-config.configmap.yaml
+  - odhdashboardconfig.yaml
