--- a/Dockerfile.konflux
+++ b/Dockerfile.konflux
@@ -58,4 +58,5 @@ LABEL com.redhat.component="odh-dashboard-container" \
       io.openshift.expose-services="" \
       io.k8s.display-name="odh-dashboard" \
       io.k8s.description="odh-dashboard" \
+      io.openshift.tags="" \
       com.redhat.license_terms="https://www.redhat.com/licenses/Red_Hat_Standard_EULA_20191108.pdf"
