--- a/.tekton/odh-dashboard-v2-16-push.yaml
+++ b/.tekton/odh-dashboard-v2-16-push.yaml
@@ -283,7 +283,7 @@ spec:
         - release=$(tasks.clone-repository.results.commit-timestamp)
         - git.url=$(params.git-url)
         - git.commit=$(params.revision)
-        - io.openshift.tags="odh-dashboard"
+        - io.openshift.tags=odh-dashboard
       - name: SOURCE_ARTIFACT
         value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
       - name: CACHI2_ARTIFACT
