--- a/.tekton/odh-dashboard-v2-18-push.yaml
+++ b/.tekton/odh-dashboard-v2-18-push.yaml
@@ -31,7 +31,7 @@ spec:
     value:
     - linux/x86_64
     - linux/ppc64le
-    - linux/s390x
+    - linux-large/s390x
   - name: dockerfile
     value: Dockerfile.konflux
   - name: path-context
