disable hermetic (for now) and fix dockerfile sealights

--- a/Dockerfile.konflux.sealights
+++ b/Dockerfile.konflux.sealights
@@ -37,10 +37,9 @@ ENV TARGET_BRANCH="sealights-poc-2.16"
 ENV EXCLUDE="public/**/*.js,files/**/*.js"
 ENV SCM_PROVIDER="Github"
 
-RUN --mount=type=secret,id=sealights-credentials/token \
-    export SEALIGHTS_TOKEN="$(cat /run/secrets/sealights-credentials/token)"
-
-RUN npx slnodejs scan --buildsessionidfile buildSessionId --scm git --scmProvider "${SCM_PROVIDER}" --excludedpaths "${EXCLUDE}" --build "${BUILD_NAME}" --workspacepath "${BUILD_DIR_PATH}" --token "${SEALIGHTS_TOKEN}" --instrumentForBrowsers --babylonPlugins "${BABYLON_PLUGINS}" --outputpath sl_build
+RUN --mount=type=secret,id=sealights-credentials \
+    SEALIGHTS_TOKEN="$(cat /run/secrets/sealights-credentials/token)" && \ 
+npx slnodejs scan --buildsessionidfile buildSessionId --scm git --scmProvider "${SCM_PROVIDER}" --excludedpaths "${EXCLUDE}" --build "${BUILD_NAME}" --workspacepath "${BUILD_DIR_PATH}" --token "${SEALIGHTS_TOKEN}" --instrumentForBrowsers --babylonPlugins "${BABYLON_PLUGINS}" --outputpath sl_build
 
 ## END SEALIGHTS
 
