--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "slnodejs": "^6.1.1006"
   }
 }
