--- a/Dockerfile.konflux.sealights
+++ b/Dockerfile.konflux.sealights
@@ -30,13 +30,11 @@ ENV COMMUNITY_LINK=""
 RUN npm run build
 
 ## BEGIN SEALIGHTS
-ENV BUILD_DIR_PATH="frontend/public"
+ENV BUILD_DIR_PATH="./frontend/public"
 ENV BABYLON_PLUGINS="jsx,typescript"
 ARG SEALIGHTS_BUILD_NAME=test
 ARG SEALIGHTS_BSID=test
 ENV TARGET_BRANCH="sealights-poc-2.16"
-ENV EXCLUDE="public/**/*.js,files/**/*.js"
-ENV SCM_PROVIDER="Github"
 
 RUN npm install slnodejs
 
@@ -44,7 +42,7 @@ USER root
 ENV NODE_DEBUG=sl
 RUN --mount=type=secret,id=sealights-credentials/token \
     SEALIGHTS_TOKEN="$(cat /run/secrets/sealights-credentials/token)"  && \
- ./node_modules/.bin/slnodejs scan --buildsessionid "${SEALIGHTS_BSID}" --scm git --scmProvider "${SCM_PROVIDER}" --excludedpaths "${EXCLUDE}" --build "${BUILD_NAME}" --workspacepath "${BUILD_DIR_PATH}" --token "${SEALIGHTS_TOKEN}" --instrumentForBrowsers --babylonPlugins "${BABYLON_PLUGINS}" --outputpath sl_build
+ ./node_modules/.bin/slnodejs scan --buildsessionid "${SEALIGHTS_BSID}" --scm none --excludedpaths "${EXCLUDE}" --build "${BUILD_NAME}" --workspacepath "${BUILD_DIR_PATH}" --token "${SEALIGHTS_TOKEN}" --instrumentForBrowsers --babylonPlugins "${BABYLON_PLUGINS}" --outputpath sl_build
 
 USER default
 ## END SEALIGHTS
